{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 136,
  "lineage": "0a77157c-76b7-2e1e-eec1-877014975f01",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.133.129.48",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-09-08T03:25:40.087-07:00",
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/regions/us-central1/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/regions/us-central1/addresses/ipv4-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ingress_from_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-08T00:23:33.161-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/global/firewalls/allow-ingress-from-internet",
            "log_config": [],
            "name": "allow-ingress-from-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/networks/scstore",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/firewalls/allow-ingress-from-internet",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.15.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-09-08T00:23:33.078-07:00",
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/global/addresses/private-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/networks/scstore",
            "prefix_length": 16,
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/addresses/private-ip-address"
          },
          "dependencies": [
            "google_compute_network.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/global/networks/scstore",
            "mtu": 0,
            "name": "scstore",
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/networks/scstore"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "mig",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-08T05:09:07.316-07:00",
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/regions/us-central1/routers/scstore",
            "name": "scstore",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/networks/scstore",
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/regions/us-central1/routers/scstore"
          },
          "dependencies": [
            "google_compute_network.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "mig2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-08T19:27:41.882-07:00",
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/regions/us-west1/routers/scstore",
            "name": "scstore",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/networks/scstore",
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/regions/us-west1/routers/scstore"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "mig3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-08T19:27:41.461-07:00",
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/regions/us-east1/routers/scstore",
            "name": "scstore",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/networks/scstore",
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/regions/us-east1/routers/scstore"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat-mig",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-03-1486ac545c04/us-central1/scstore/scstore-cloud-nat-mig",
            "min_ports_per_vm": 64,
            "name": "scstore-cloud-nat-mig",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "region": "us-central1",
            "router": "scstore",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.mig",
            "module.cloud-nat-mig.google_compute_router.router",
            "module.cloud-nat-mig.random_string.name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat-mig2",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-03-1486ac545c04/us-west1/scstore/scstore-cloud-nat-mig2",
            "min_ports_per_vm": 64,
            "name": "scstore-cloud-nat-mig2",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "region": "us-west1",
            "router": "scstore",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.mig2",
            "module.cloud-nat-mig2.google_compute_router.router",
            "module.cloud-nat-mig2.random_string.name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat-mig3",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-03-1486ac545c04/us-east1/scstore/scstore-cloud-nat-mig3",
            "min_ports_per_vm": 64,
            "name": "scstore-cloud-nat-mig3",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "region": "us-east1",
            "router": "scstore",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.mig3",
            "module.cloud-nat-mig3.google_compute_router.router",
            "module.cloud-nat-mig3.random_string.name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/regions/us-central1/instanceGroups/scstore-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/regions/us-east1/instanceGroups/scstore-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/regions/us-west1/instanceGroups/scstore-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-09-08T05:09:56.543-07:00",
            "enable_cdn": true,
            "fingerprint": "iXquqSbbAvo=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/healthChecks/scstore-hc-default"
            ],
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/global/backendServices/scstore-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "scstore-backend-default",
            "port_name": "http",
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/backendServices/scstore-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.default",
            "google_compute_router.mig",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.scstore",
            "module.cloud-nat-mig.google_compute_router.router",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig2.data.google_compute_zones.available",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig3.data.google_compute_zones.available",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig_template.data.google_compute_image.image",
            "module.mig_template.data.google_compute_image.image_family",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_id.db_instance_name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-08T05:09:44.454-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/global/firewalls/scstore-hc-0",
            "log_config": [],
            "name": "scstore-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/networks/scstore",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/firewalls/scstore-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "scstore"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.default",
            "google_compute_router.mig",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.scstore",
            "module.cloud-nat-mig.google_compute_router.router",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig2.data.google_compute_zones.available",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig3.data.google_compute_zones.available",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig_template.data.google_compute_image.image",
            "module.mig_template.data.google_compute_image.image_family",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_id.db_instance_name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.111.10.144",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-09-08T05:09:06.528-07:00",
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/global/addresses/scstore-address",
            "name": "scstore-address",
            "prefix_length": 0,
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/addresses/scstore-address"
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/global/forwardingRules/scstore",
            "ip_address": "34.111.10.144",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "scstore",
            "port_range": "80-80",
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/forwardingRules/scstore",
            "target": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/targetHttpProxies/scstore-http-proxy"
          },
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.default",
            "google_compute_router.mig",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.scstore",
            "module.cloud-nat-mig.google_compute_router.router",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_global_address.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_target_http_proxy.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig2.data.google_compute_zones.available",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig3.data.google_compute_zones.available",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig_template.data.google_compute_image.image",
            "module.mig_template.data.google_compute_image.image_family",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_id.db_instance_name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-08T08:35:40.281-07:00",
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/global/targetHttpProxies/scstore-http-proxy",
            "name": "scstore-http-proxy",
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "proxy_bind": false,
            "proxy_id": 4042563371255969059,
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/targetHttpProxies/scstore-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/urlMaps/scstore-url-map"
          },
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.default",
            "google_compute_router.mig",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.scstore",
            "module.cloud-nat-mig.google_compute_router.router",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig2.data.google_compute_zones.available",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig3.data.google_compute_zones.available",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig_template.data.google_compute_image.image",
            "module.mig_template.data.google_compute_image.image_family",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_id.db_instance_name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-08T08:35:28.470-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/backendServices/scstore-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "W358tFHN4Ck=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/qwiklabs-gcp-03-1486ac545c04/global/urlMaps/scstore-url-map",
            "map_id": 4722212546796827951,
            "name": "scstore-url-map",
            "path_matcher": [],
            "project": "qwiklabs-gcp-03-1486ac545c04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-1486ac545c04/global/urlMaps/scstore-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_global_address.private_ip_address",
            "google_compute_network.default",
            "google_compute_router.mig",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.scstore",
            "module.cloud-nat-mig.google_compute_router.router",
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig2.data.google_compute_zones.available",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig3.data.google_compute_zones.available",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig_template.data.google_compute_image.image",
            "module.mig_template.data.google_compute_image.image_family",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_id.db_instance_name_suffix"
          ]
        }
      ]
    }
  ]
}